--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 </head>
 <body>
         <div id="PlayArea">
-        <div id="detail">
-            <div id="visorArea">
-                <div id="RobotArea" class="visor">
-                    <h1>Robô</h1>
-                    <div class="RPS">
-                        <p>🤖</p>
+            <div id="detail">
+                <div id="onlight"></div>
+                <div id="visorArea">
+                    <div id="RobotArea" class="visor">
+                        <h1>Robô</h1>
+                        <div class="RPS">
+                            <p>🤖</p>
+                        </div>
                     </div>
-                </div>
-                <div id="PlayerArea" class="visor">
-                    <h1>Player</h1>
-                    <div class="RPS">
-                        <p>✊</p>
+                    <div id="PlayerArea" class="visor">
+                        <h1>Player</h1>
+                        <div class="RPS">
+                            <p>✊</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         <main id="buttonsArea">
-            <ul>
-                <li><button>a</button></li>
-                <li><button>b</button></li>
-                <li><button>c</button></li>
-            </ul>
+            
+                <div class="button"><button></button> <p>A</p></div>
+                <div class="button"><button></button> <p>B</p></div>
+                <div class="button"><button></button> <p>C</p></div>
+            
         </main>
     </div>
 </body>
