--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                 
                 <div class='pick' id="playerPick">
 
-                  <div id="QuestionPick">
-
-                  </div>
+                  <div id="QuestionPick"></div>
+                  <p id="NamePick">Pedra</p>
                 </div>
                 <div class="Icon" name="PlayerI"></div>
                </aside>         
@@ -50,10 +49,12 @@
           <div id="scoreArea">
             <p>score</p>
               <div id="score">
-
+                <div id="NumbScorej">
                   <p id="actualScore"></p>
                   <hr>
                   <p id='highScore'></p>
+                </div>
+                  
                 </div>
                 <p>HighScore</p>
             </div>
@@ -80,7 +81,7 @@
 
       <div id="SSV">
         <div id="startselect">
-          <div class="buttonsSSArea" onclick="GameStart()">
+          <div class="buttonsSSArea" onclick="GameStart()" id="buttonStart">
               <div class="detailButtonSS">
                   <button class="buttonsSS"></button>
               </div>
